--- a/BlogMVC/BlogMVC/BlogMVC.csproj
+++ b/BlogMVC/BlogMVC/BlogMVC.csproj
@@ -186,6 +186,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012141248540_InitialCreate.cs" />
+    <Compile Include="Migrations\202012141248540_InitialCreate.Designer.cs">
+      <DependentUpon>202012141248540_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202012141256257_AddTable_Blog.cs" />
+    <Compile Include="Migrations\202012141256257_AddTable_Blog.Designer.cs">
+      <DependentUpon>202012141256257_AddTable_Blog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\EntityConfiguration\EntityTypeConfiguration.cs" />
     <Compile Include="Models\Entity\Blog.cs" />
@@ -267,6 +276,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202012141248540_InitialCreate.resx">
+      <DependentUpon>202012141248540_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012141256257_AddTable_Blog.resx">
+      <DependentUpon>202012141256257_AddTable_Blog.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
