--- a/BlogMVC/BlogMVC/packages.config
+++ b/BlogMVC/BlogMVC/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="AutoMapper" version="8.0.0" targetFramework="net472" />
   <package id="AutoMapper.EF6" version="2.0.0" targetFramework="net472" />
-  <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="bootstrap" version="4.5.3" targetFramework="net472" />
   <package id="DelegateDecompiler" version="0.24.0" targetFramework="net472" />
   <package id="DelegateDecompiler.EntityFramework" version="0.24.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
@@ -36,6 +36,7 @@
   <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net472" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
