--- a/BlogMVC/BlogMVC/packages.config
+++ b/BlogMVC/BlogMVC/packages.config
@@ -37,6 +37,10 @@
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="Serilog" version="2.7.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net472" />
+  <package id="SerilogWeb.Classic" version="5.0.52" targetFramework="net472" />
+  <package id="SerilogWeb.Classic.Mvc" version="2.1.25" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
